--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.515.0",
+    "openai": "^5.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
